[package]
name = "asensio_kernel"
version = "0.1.0"
authors = ["Juanjo Asensio García <asengar2009@gmail.com>"]
description = "A small kernel for x86_64 written in Rust"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bootloader = { git = "https://github.com/rust-osdev/bootloader" } 
bootloader-boot-config = { git = "https://github.com/rust-osdev/bootloader" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]
